--- a/01/reload.html
+++ b/01/reload.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>自動更新頁面</title>
+    <style>
+        div{ width: 150px; height: 150px; background: grey; animation: divMove 100s; }
+
+        @keyframes divMove{
+            0%{ width: 10px; }
+            100%{ width: 800px; }
+        }
+    </style>
 </head>
 <body>
-    
+    <div></div>
+    <script src="reload.js"></script>
 </body>
 </html>
