--- a/01/autoClose.html
+++ b/01/autoClose.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>許多秒後不操作自動關閉視窗</title>
+    <title>N秒不操作自動關閉視窗</title>
 </head>
 <body onclick="clickBody()">
     <p>如果使用者不點擊視窗，5秒後將自動關閉</p>
